# aireba-trends

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/processed/: anomalies.csv  daily_air_quality.csv  monthly_trends.csv  pollutant_summary.csv  source_overlap_report.csv  station_summary.csv  yearly_trends.csv
data/raw/: calidad-de-aire-2017.xlsx  calidad-de-aire-2018.xlsx  calidad-de-aire-2019.xlsx  calidad_aire_2025.csv  calidad_aire_2026.csv  contaminantes.xlsx  estaciones-ambientales.xlsx
docs/: app.js  index.html  styles.css
docs/data/: anomalies.json  metadata.json  monthly_trends.json  stations.json  summary.json  yearly_trends.json
scripts/: anomaly_detection.py  clean_data.py  export_static_data.py  generate_charts.py  load_data.py  main.py  transform_data.py  trend_analysis.py
