[project]
name = "aireba-trends"
version = "0.1.0"
description = "Static air quality pipeline and dashboard for Buenos Aires open data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26.0",
  "openpyxl>=3.1.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
]

[tool.uv]
package = false
